# Collisions

./: CMakeLists.txt  README.md
include/: particle.h  seanMath.h
src/: main.c  particle.c  seanMath.c
